<resources>
    <string name="app_name">Fitness League</string>
    <string name="comecarbutton">Começar</string>
    <string name="login">Login</string>
    <string name="email_errado">Email Errado</string>
    <string name="password_errada">Password Errada</string>
    <string name="aqui">Aqui</string>
    <string name="introduza_o_email">Introduza o Email</string>
    <string name="introduza_a_password">Introduza a Password</string>
    <string name="perfil">Perfil</string>
    <string name="planos_de_treino">Planos de Treino</string>
    <string name="planos_de_nutri_o">Planos de Nutrição</string>
    <string name="hor_rios">Horários</string>
    <string name="info_gym">Info Gym</string>
    <string name="logout">Logout</string>
    <string name="horarios">Horários</string>
    <string name="minhas_bandas">Minhas Bandas</string>
    <string name="planos_nutricao">Planos de Nutrição</string>
    <string name="voltar">Voltar</string>
    <string name="estimado_utilizador">Estimado Utilizador, Relembramos que só terá acesso à aplicação se tiver a inscrição feita no Ginásio e depois ser-lhe-à atribuído os dados de login.</string>
    <string name="visitar_em">Poderá nos visitar em:</string>
    <string name="website">www.gym.com</string>
    <string name="nvAbrir">Abrir</string>
    <string name="nvFechar">Fechar</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="confirmar_logout">Quer mesmo fazer logout?</string>
    <string name="sexo">Sexo:</string>
    <string name="blank">XXXXX</string>
    <string name="title_activity_planos_treino_segunda">planos_treino_segunda</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="calcular_imc">Calcular IMC</string>
    <string name="title_activity_item_ementa">item_ementaActivity</string>
</resources>
