<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/wallpaper_3">

    <Button
        android:id="@+id/btnIP"
        android:layout_width="60dp"
        android:layout_height="50dp"
        android:layout_alignBottom="@+id/btnLogin"
        android:layout_alignParentEnd="true"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="11dp"
        android:layout_marginEnd="34dp"
        android:layout_marginBottom="-4dp"
        android:fontFamily="@font/bold"
        android:onClick="onClickIP"
        android:text="+ IP"
        android:textAllCaps="false"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="20sp" />

    <Space
        android:id="@+id/space1"
        android:layout_width="45dp"
        android:layout_height="match_parent" />

    <EditText
        android:id="@+id/editTextPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="77dp"
        android:layout_marginBottom="267dp"
        android:layout_toEndOf="@+id/space1"
        android:ems="10"
        android:hint="@string/introduza_a_password"
        android:inputType="textPersonName"
        android:password="true" />

    <EditText
        android:id="@+id/editTextUsername"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/editTextPassword"
        android:layout_marginStart="78dp"
        android:layout_marginBottom="19dp"
        android:layout_toEndOf="@+id/space1"
        android:ems="10"
        android:hint="Introduza o Username"
        android:inputType="textPersonName" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="207dp"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/editTextPassword"
        android:layout_marginStart="81dp"
        android:layout_marginBottom="-77dp"
        android:layout_toEndOf="@+id/space1"
        android:text="Não tem aceso à conta? Clique"
        android:textSize="18sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="207dp"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/editTextPassword"
        android:layout_marginStart="137dp"
        android:layout_marginBottom="-77dp"
        android:layout_toEndOf="@+id/space1"
        android:onClick="onClickAqui"
        android:text="@string/aqui"
        android:textColor="#0A009B"
        android:textSize="18sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/btnLogin"
        android:layout_width="153dp"
        android:layout_height="43dp"
        android:layout_alignBottom="@+id/textView8"
        android:layout_marginStart="104dp"
        android:layout_marginBottom="-107dp"
        android:layout_toEndOf="@+id/space1"
        android:background="#00020000"
        android:text="@string/login"
        android:textColor="#070000"
        android:textColorHint="#FFFFFF"
        android:textStyle="bold"
        android:onClick="onClickLogin"
        tools:layout_editor_absoluteX="129dp"
        tools:layout_editor_absoluteY="635dp" />

    <TextView
        android:id="@+id/textViewIP"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/textView8"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="192dp"
        android:layout_marginBottom="-47dp"
        android:text="192.168.1.7" />

</RelativeLayout>